# AUVControl

src/: terminalCommands.txt
src/Mission_planning/: CMakeLists.txt  package.xml
src/Mission_planning/src/: behaviour_2.cpp  mission_execute.cpp  set_waypoint.cpp  set_waypoint_1.cpp
src/auv_interfaces/: CMakeLists.txt  package.xml
src/auv_interfaces/msg/: Waypoint.msg
src/auv_interfaces/srv/: Waypoint.srv
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: GoTo.srv
src/detection/: package.xml  setup.py
src/kalmenfilter_cpp_pkg/: CMakeLists.txt  package.xml
src/kalmenfilter_cpp_pkg/config/: mapper_params_online_async.yaml
src/kalmenfilter_cpp_pkg/src/: state_subscriber.cpp
src/lqrpy/: setup.py
src/lqrpy/lqrpy/: ModelMatercies.py  Pixhawk.py  commands.py  dvl.py  dvl_publisher.py  lqrNode.py  pixhawk_publisher.py  ros2_detect.py  sensor_data_stream.py
src/lqrpy/lqrpy/models/: common.py
src/lqrpy/lqrpy/rexrov/: Inertia.txt  ModelSpecs.txt
src/lqrpy/lqrpy/swift/: Inertia.txt  LinearDamping.txt  MA.txt  ModelSpecs.txt  QuadraticDamping.txt
src/lqrpy/lqrpy/wldvl/: __init__.py  protocol.py
src/lqrpy/lqrpy/wldvl/tests/: test_protocol.py
src/odom_to_tf2/: CMakeLists.txt  package.xml
src/odom_to_tf2/src/: odom_to_tf2.cpp
src/sensor_data_bringup/: CMakeLists.txt
src/sensor_data_bringup/launch/: pointCloud_2_LaserScan.launch.py
src/trajectory_planning/: package.xml  setup.py
src/trajectory_planning/trajectory_planning/: Herm.py  cubicPath.py  dubinsPath.py  quantic.py  ruk.py  testnode.py  trajectoryNode.py  xmx.py
src/visual_odometry/: package.xml  setup.py
src/visual_odometry/visual_odometry/: AKAZE.csv  ORB.csv  SIFTL1.csv  SIFTL2.csv  plot.py  record.py  visual_od.py
